<resources>
    <string name="app_name">Anki Car Reader</string>

    <!-- API Detais -->
    <string name="ankiCarURL">https://api.opcau.com/v6/anki/carData/</string>
    <string name="ankiGroupURL">https://api.opcau.com/v6/anki/group/</string>
    <string name="apikey">efcad8b0-ad45-496d-b364-928ba8c0958e</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan car</string>
    <string name="no_barcode_captured">Scan a car to see stats</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="battery">Battery: </string>
    <string name="speed">Top Speed: </string>
    <string name="avg">Avg Speed: </string>
    <string name="laps">Laps Today: </string>
    <string name="Distance">Total\nDistance: </string>
    <string name="DistanceTD">Distance\nToday: </string>
    <string name="event">at </string>
    <string name="fastest_lap">Fastest\nLap:</string>
    <string name="number_of_laps">Number of Laps:</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="battery_life">Battery Life</string>
    <string name="max_speed">Max Speed</string>
    <string name="event_detail">Event Detail</string>
    <string name="laps_text">Laps:</string>
    <string name="cars_text">Cars:</string>
    <string name="crashes_text">Crashes:</string>
    <string name="devices_text">Devices:</string>
    <string name="distance_text">Distance:</string>
    <string name="first_registration_text">First Registration:</string>
    <string name="latest_registration_text">Latest Registration:</string>
    <string name="number_of_messages_text">Number of Messages:</string>
    <string name="port_text">Port:</string>
    <string name="hostip_text">Host IP Address:</string>
    <string name="driveui_text">Drive UI:</string>
    <string name="registrations_text">Registrations:</string>

</resources>
