<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bggrad"
    android:orientation="vertical"
    tools:context="com.coggs.ankicarscanner.MainActivity">

    <ImageView
        android:id="@+id/carView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/icon_anki" />

    <ImageView
        android:id="@+id/iconView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scan_barcode_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:elevation="5dp"
        app:srcCompat="@drawable/oracle_clr" />

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:elevation="20dp"
        android:freezesText="true"
        android:gravity="center"
        android:text="@string/no_barcode_captured"
        android:textAlignment="center"
        android:textSize="22sp" />

    <Button
        android:id="@+id/scan_barcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:text="@string/scan_barcode_button"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/speedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="28dp"
        android:elevation="20dp"
        android:background="@drawable/textpanel"
        android:text="@string/max_speed"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/batteryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/textpanel"
        android:elevation="20dp"
        android:text="@string/battery_life"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/avgTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/textpanel"
        android:elevation="20dp"
        android:text="@string/avg_speed"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/lapTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="228dp"
        android:background="@drawable/textpanel"
        android:elevation="20dp"
        android:text="@string/number_of_laps"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/distTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="195dp"
        android:layout_marginTop="245dp"
        android:background="@drawable/textpanel"
        android:elevation="20dp"
        android:text="@string/Distance"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/disttdTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="233dp"
        android:layout_marginTop="173dp"
        android:background="@drawable/textpanel"
        android:elevation="20dp"
        android:text="@string/DistanceTD"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/flapTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/textpanel"
        android:elevation="20dp"
        android:text="@string/fastest_lap"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/eventTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textpanel"
        android:elevation="20dp"
        android:text="@string/event_detail"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/moreData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scan_barcode_button"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="375dp"
        android:onClick="moreData"
        android:visibility="visible"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</RelativeLayout>
